--- a/css/values.css
+++ b/css/values.css
@@ -11,8 +11,14 @@
     margin-right:100px;
     font-size:100px;
     color: rgb(254, 254, 255);
-    background-color: rgb(12, 199, 174);
-    border: solid rgb(255, 253, 253);
+    background: #67B26F;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4ca2cd, #67B26F);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4ca2cd, #67B26F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    
+
+    
+    border: solid rgb(255, 253, 253) 15px;
     border-radius: 200px;
     
 }
