--- a/css/favorite.css
+++ b/css/favorite.css
@@ -1,5 +1,5 @@
 .favorite_head{
-    padding-top:150px;
+    padding-top:70px;
     font-size:25px;
     padding-left:20px;
     color: rgb(248, 50, 109);
@@ -29,12 +29,12 @@
     width:400px; 
 }
 .favorite_imagedsc2{
-    padding-left:90px;
+    padding-left:60px;
     padding-right:120px;
     width:400px;
 }
 .favorite_imagedsc3{
-    padding-left:100px;
+    padding-left:60px;
     padding-right:30px;
     width:380px;
 }
@@ -199,4 +199,23 @@
 
 .my-song_photos2{
     margin-top:80px;
+}
+.menu_nav{
+    padding-top:150px;
+    padding-left:1180px;
+    font-size: 30px;
+   
+}
+.menu_nav1{
+    display: flex;
+    justify-content: right;
+}
+.menu_nav3{
+    color: inherit;
+    padding-left:12px;
+    padding-right:12px;
+    margin-right: 10px;
+    font-weight: 1000;
+    border-radius:50px;
+    background-color: rgb(124, 255, 112);
 }
